--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
      <link rel="stylesheet" type="text/css" href="gridStyle.css">
 	 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	 <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 
       <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
      
@@ -307,8 +308,17 @@
         <a href="" class="h-100 d-inline-block"><i class="fab fa-google-plus"></i></a>
         <a href="" class="h-100 d-inline-block"><i class="fab fa-dribbble-square"></i></a>
         <a href="" ><i class="fab fa-linkedin-in"></i></a>
-
+		<div id="particles-js">
+		
+	</div> 
+	<div class="count-particles"> 
+		<span class="js-count-particles"></span> 
+	</div>
     </footer>
+
+		<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
+		<script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+
 
      <script src="jquery-3.3.1.min.js"></script>
 
